tweak, hedley is actually vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.cmake-in linguist-language=C
 # not vendored, i just put auxiliary libs under deps
 deps/** -linguist-vendored
+deps/hedley/** linguist-vendored
