separate parsing and execution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ add_subdirectory(deps/println)
 add_subdirectory(deps/linenoise)
 add_subdirectory(deps/buf)
 
-add_executable(shlol src/main.c src/lexer.c src/parser.c)
+add_executable(
+  shlol src/main.c src/lexer.c src/parser.c src/ast.c src/executor.c
+)
 target_compile_features(shlol PRIVATE c_std_17)
 target_link_libraries(
   shlol PRIVATE str::str println::println linenoise::linenoise buf::buf
