--- a/deps/str/CMakeLists.txt
+++ b/deps/str/CMakeLists.txt
@@ -11,6 +11,6 @@ include(PrependPath)
 set(STR_SRC_REL str.c strtox.c)
 prepend_path(STR_SRC_REL src/ STR_SRC)
 add_library(str ${STR_SRC})
-find_path(HEDLEY_INCLUDE_DIR hedley.h)
-target_include_directories(str PUBLIC ${HEDLEY_INCLUDE_DIR} include)
+target_link_libraries(str PUBLIC hedley::hedley)
+target_include_directories(str PUBLIC include)
 add_library(str::str ALIAS str)
